--- a/src/styles/constants/typography.scss
+++ b/src/styles/constants/typography.scss
@@ -1,16 +1,5 @@
-@font-face {
-  font-family: 'Druk Text Wide';
-  src: url('/fonts/DrukTextWide-Heavy.woff2') format('woff2'),
-      url('/fonts/DrukTextWide-Heavy.woff') format('woff');
-  font-weight: 900;
-  font-style: normal;
-  font-display: swap;
-}
-
-
 :root {
-  --text-font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, Roboto, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  --text-druk: 'Druk Text Wide', -apple-system, BlinkMacSystemFont, Roboto, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --text-font-family: 'Inter', -apple-system, BlinkMacSystemFont, Roboto, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
   --text-s-xs: 13px;
   --text-s-sm: 14px;
