--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -2,6 +2,10 @@
     width: 100%;
     padding: 0 24px;
 
+    &.fullHeight {
+        height: 100%;
+    }
+
     &.center {
         margin: auto;
     }
@@ -11,11 +15,11 @@
     }
 
     &[data-size="sm"] {
-        max-width: 800px;
+        max-width: 600px;
     }
 
     &[data-size="md"] {
-        max-width: 1280px;
+        max-width: 1024px;
     }
 
     &[data-size="lg"] {
